# BackupTools

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  configHelp.txt  sample.txt
BackupTools/: configHelp.txt  sample.txt
BackupTools/include/: ArgumentParser.h  FileHandler.h
BackupTools/source/: a.txt  tmp.txt
BackupTools/src/: Application.cpp  Application.h  ArgumentParser.cpp  ArgumentParser.h  FileHandler.cpp  FileHandler.h  main.cpp
Tests/: CMakeLists.txt  test.cpp
include/BackupTools/: ArgumentParser.h
src/: CMakeLists.txt  main.cpp
src/BackupTools/: Application.cpp  Application.h  ArgumentParser.cpp  FileHandler.cpp  FileHandler.h
tests/: CMakeLists.txt  test1.cpp
tests/sandbox/source/: tmp.txt
